# collasso

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  multivariate.qmd  pyproject.toml
.github/workflows/: docs.yaml  docs.yml  docstr-coverage.yaml  licenses.yaml  mypy.yaml  mypy.yml  numpydoc.yaml  pip-audit.yaml  pip-licenses.yaml  pipy.yaml  pydoclint.yaml  pydocstyle.yaml  pylint.yaml  pylint.yml  pytest.yaml  ruff.yaml  sphinx.yaml  tests.yaml  tests.yml
docs/source/: conf.py  index.md  vignette.ipynb
scripts/: _devel.qmd  _logo.qmd  application.py  logo.qmd  simulation.py  vignette.py
src/: functions.py
src/collasso/: __init__.py  _helpers.py  functions.py  multi_task.py  simulate.py  single_task.py
tests/: test_functions.py  unit_tests.py
