[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "collasso"
version = "0.0.1"
description = "Sparse linear multi-task regression with correlation-based information sharing"
authors = [
    { name = "Armin Rauschenberger" }
]
license = {text = "no license"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.poe.tasks]
docs = "pdoc --docformat numpy src/functions.py -o docs/"

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true