[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "collasso"
version = "0.1.0b1"
description = "Sparse Linear Multi-Task Regression"
readme = "README.md"
authors = [
    { name = "Armin Rauschenberger" }
]
license = {text = "no license"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "docrep>=0.3",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.poe.tasks]
docs = "pdoc --docformat numpy src/functions.py -o docs/"

#[tool.mypy]
#check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "openml.*", "docrep"]
ignore_missing_imports = true

[tool.docstr-coverage]
skip_init = true

[tool.coverage.report]
exclude_also = [
  "raise ValueError",
]

[tool.pydoclint]
style = "numpy"
arg-type-hints-in-docstring = true
check-return-types = false
check-class-attributes = false
native-mode-noqa-location = "definition"

[tool.pydoctest]
parser = "numpy"
exclude_paths = [
    "**/__init__.py",
    "**/setup.py",
    "**/application.py",
    "**/simulation.py",
    "**/vignette.py",
]

